--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,39 @@
-pandas == 2.0.3
-pyspark == 3.5.0
-scikit-learn == 1.4.1
-numpy == 1.26.0
-requests == 2.31.0
-pyyaml == 6.0.1
-pytest == 7.4.1
-boto3 == 1.28.0
-botocore == 1.31.0
+# Core Python Libraries
+numpy==1.24.3
+pandas==2.0.3
+scipy==1.10.1
+scikit-learn==1.2.2
+matplotlib==3.7.1
+seaborn==0.12.2
+
+# Big Data & Spark
+pyspark==3.4.0
+pyarrow==12.0.0
+
+# Cloud & Storage (Snowflake, AWS S3)
+snowflake-connector-python==3.0.2
+snowflake-sqlalchemy==1.4.7
+boto3==1.28.0
+botocore==1.31.0
+
+# Database & ORMs
+sqlalchemy==2.0.12
+duckdb==0.8.1
+
+# Logging & Monitoring
+loguru==0.7.0
+
+# Utilities & Tools
+pyyaml==6.0
+python-dotenv==1.0.0
+joblib==1.3.1
+tqdm==4.65.0
+
+# Testing
+pytest==7.3.2
+
+# Optional: ML Experiment Tracking
+mlflow==2.4.2
+
+# Optional: Code Formatting
+black==23.3.0
